@@ -1,6 +1,12 @@
 StarSpan ChangeLog
 $Id$
 
+2008-04-11
+    - new IntersectionInfo struct to add more information in intersectionFound() 
+      and intersectionEnd() traversal observer interface.
+      
+    - 
+    
 2008-04-10
     - Some code cleanup:
         Removed vector/{Makefile,Vector_shapelib.cc}
